plugins/binding/capi/include/TellusimCMath.h

typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
TS_CAPI TSVector2d* TS_CCALL tsVector2d_abs(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_neg(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_mul1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_div1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_add1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_sub1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_mul(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_div(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_add(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_sub(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_min(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_max(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_clamp(TSVector2d *ret, const TSVector2d *v, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_saturate(TSVector2d *ret, const TSVector2d *v);
TS_CAPI float64_t TS_CCALL tsVector2d_dot(const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI float64_t TS_CCALL tsVector2d_cross(const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI float64_t TS_CCALL tsVector2d_length(const TSVector2d *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_normalize(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_lerp(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1, float64_t k);
/*****************************************************************************\
 *
 * Vector3
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector3i {
	union {
		struct {
			int32_t x, y, z;
		};
		struct {
			TSVector2i xy;
			int32_t xy_z;
		};
		int32_t v[3];
	};
} TSVector3i;
typedef struct TSVector3u {
	union {
		struct {
			uint32_t x, y, z;
		};
		struct {
			TSVector2u xy;
			uint32_t xy_z;
		};
		uint32_t v[3];
	};
} TSVector3u;
TS_CAPI TSVector3i* TS_CCALL tsVector3i_abs(TSVector3i *ret, const TSVector3i *v);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_neg(TSVector3i *ret, const TSVector3i *v);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_mul1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_mul1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_div1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_div1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_add1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_add1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_sub1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_sub1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_and1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_and1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_or1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_or1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_xor1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_xor1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_shl1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_shl1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_shr1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_shr1(TSVector3u *ret, const TSVector3u *v0, uint32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_mul(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_div(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_add(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_sub(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_and(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_or(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_xor(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_min(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_min(TSVector3u *ret, const TSVector3u *v0, const TSVector3u *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_max(TSVector3i *ret, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_max(TSVector3u *ret, const TSVector3u *v0, const TSVector3u *v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_clamp(TSVector3i *ret, const TSVector3i *v, const TSVector3i *v0, const TSVector3i *v1);
TS_CAPI TSVector3u* TS_CCALL tsVector3u_clamp(TSVector3u *ret, const TSVector3u *v, const TSVector3u *v0, const TSVector3u *v1);