plugins/binding/rust/source/TellusimRSMath.rs

	
	pub fn new_s(v: f64) -> Vector2d {
		Vector2d { x: v, y: v }
	}
	pub fn new_v2i(v: &Vector2i) -> Vector2d {
		Vector2d { x: v.x as f64, y: v.y as f64 }
	}
	pub fn new_v2u(v: &Vector2u) -> Vector2d {
		Vector2d { x: v.x as f64, y: v.y as f64 }
	}
	pub fn new_v2f(v: &Vector2d) -> Vector2d {
		Vector2d { x: v.x as f64, y: v.y as f64 }
	}
	pub fn new_v3(v: &Vector3d) -> Vector2d {
		Vector2d { x: v.x, y: v.y }
	}
	pub fn new_v4(v: &Vector4d) -> Vector2d {
		Vector2d { x: v.x, y: v.y }
	}
	pub fn new(x: f64, y: f64) -> Vector2d {
		Vector2d { x: x, y: y }
	}
	pub fn new_a(v: &[f64]) -> Vector2d {
		Vector2d { x: v[0], y: v[1] }
	}
	
	pub fn abs(&self) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector2d, v1: &Vector2d) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector2d, v1: &Vector2d) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector2d, v1: &Vector2d) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector2d, v1: &Vector2d) -> f64 {
		unsafe { tsVector2d_dot(v0, v1) }
	}
	pub fn cross(v0: &Vector2d, v1: &Vector2d) -> f64 {
		unsafe { tsVector2d_cross(v0, v1) }
	}
	
	pub fn length(&self) -> f64 {
		unsafe { tsVector2d_length(self) }
	}
	pub fn normalize(&self) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_normalize(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector2d, v1: &Vector2d, k: f64) -> Vector2d {
		let mut ret = Vector2d::default();
		unsafe { tsVector2d_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector2d {
		Vector2d { x: 0.0, y: 0.0 }
	}
	pub fn one() -> Vector2d {
		Vector2d { x: 1.0, y: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector2d {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1})", self.x, self.y)
	}
}

/*
 */
declare_neg_op!(Vector2d, tsVector2d_neg);

/*
 */
declare_scalar_op!(Vector2d, f64, Mul, mul, tsVector2d_mul1);
declare_scalar_op!(Vector2d, f64, Div, div, tsVector2d_div1);
declare_scalar_op!(Vector2d, f64, Add, add, tsVector2d_add1);
declare_scalar_op!(Vector2d, f64, Sub, sub, tsVector2d_sub1);

/*
 */
declare_vector_op!(Vector2d, Mul, mul, tsVector2d_mul);
declare_vector_op!(Vector2d, Div, div, tsVector2d_div);
declare_vector_op!(Vector2d, Add, add, tsVector2d_add);
declare_vector_op!(Vector2d, Sub, sub, tsVector2d_sub);

/*
 */
extern "C" {
	fn tsVector2d_abs(ret: *mut Vector2d, v: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_neg(ret: *mut Vector2d, v: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_mul1(ret: *mut Vector2d, v0: *const Vector2d, v1: f64) -> *mut Vector2d;
	fn tsVector2d_div1(ret: *mut Vector2d, v0: *const Vector2d, v1: f64) -> *mut Vector2d;
	fn tsVector2d_add1(ret: *mut Vector2d, v0: *const Vector2d, v1: f64) -> *mut Vector2d;
	fn tsVector2d_sub1(ret: *mut Vector2d, v0: *const Vector2d, v1: f64) -> *mut Vector2d;
	fn tsVector2d_mul(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_div(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_add(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_sub(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_min(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_max(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_clamp(ret: *mut Vector2d, v: *const Vector2d, v0: *const Vector2d, v1: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_saturate(ret: *mut Vector2d, v: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_dot(v0: *const Vector2d, v1: *const Vector2d) -> f64;
	fn tsVector2d_cross(v0: *const Vector2d, v1: *const Vector2d) -> f64;
	fn tsVector2d_length(v: *const Vector2d) -> f64;
	fn tsVector2d_normalize(ret: *mut Vector2d, v: *const Vector2d) -> *mut Vector2d;
	fn tsVector2d_lerp(ret: *mut Vector2d, v0: *const Vector2d, v1: *const Vector2d, k: f64) -> *mut Vector2d;
}

/*****************************************************************************\
 *
 * Vector3i
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector3i {
	pub x: i32,
	pub y: i32,
	pub z: i32,
}

/*
 */
impl Vector3i {
	
	pub fn new_s(v: i32) -> Vector3i {
		Vector3i { x: v, y: v, z: v }
	}
	pub fn new_v2(v: &Vector2i, z: i32) -> Vector3i {
		Vector3i { x: v.x, y: v.y, z: z }
	}
	pub fn new_v3u(v: &Vector3u) -> Vector3i {
		Vector3i { x: v.x as i32, y: v.y as i32, z: v.z as i32 }
	}
	pub fn new_v3f(v: &Vector3f) -> Vector3i {
		Vector3i { x: v.x as i32, y: v.y as i32, z: v.z as i32 }
	}
	pub fn new_v3d(v: &Vector3d) -> Vector3i {
		Vector3i { x: v.x as i32, y: v.y as i32, z: v.z as i32 }
	}
	pub fn new_v4(v: &Vector4i) -> Vector3i {
		Vector3i { x: v.x, y: v.y, z: v.z }
	}
	pub fn new(x: i32, y: i32, z: i32) -> Vector3i {
		Vector3i { x: x, y: y, z: z }
	}
	pub fn new_a(v: &[i32]) -> Vector3i {
		Vector3i { x: v[0], y: v[1], z: v[2] }
	}
	
	pub fn abs(&self) -> Vector3i {
		let mut ret = Vector3i::default();
		unsafe { tsVector3i_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector3i, v1: &Vector3i) -> Vector3i {
		let mut ret = Vector3i::default();
		unsafe { tsVector3i_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector3i, v1: &Vector3i) -> Vector3i {
		let mut ret = Vector3i::default();
		unsafe { tsVector3i_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector3i, v1: &Vector3i) -> Vector3i {
		let mut ret = Vector3i::default();
		unsafe { tsVector3i_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector3i {
		Vector3i { x: 0, y: 0, z: 0 }
	}
	pub fn one() -> Vector3i {
		Vector3i { x: 1, y: 1, z: 1 }
	}
}

/*
 */
impl fmt::Display for Vector3i {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2})", self.x, self.y, self.z)
	}
}

/*
 */
declare_neg_op!(Vector3i, tsVector3i_neg);

/*
 */
declare_scalar_op!(Vector3i, i32, Mul, mul, tsVector3i_mul1);
declare_scalar_op!(Vector3i, i32, Div, div, tsVector3i_div1);
declare_scalar_op!(Vector3i, i32, Add, add, tsVector3i_add1);
declare_scalar_op!(Vector3i, i32, Sub, sub, tsVector3i_sub1);
declare_scalar_op!(Vector3i, i32, BitAnd, bitand, tsVector3i_and1);
declare_scalar_op!(Vector3i, i32, BitOr,  bitor,  tsVector3i_or1);
declare_scalar_op!(Vector3i, i32, BitXor, bitxor, tsVector3i_xor1);
declare_scalar_op!(Vector3i, i32, Shl, shl, tsVector3i_shl1);
declare_scalar_op!(Vector3i, i32, Shr, shr, tsVector3i_shr1);

/*
 */
declare_vector_op!(Vector3i, Mul, mul, tsVector3i_mul);
declare_vector_op!(Vector3i, Div, div, tsVector3i_div);
declare_vector_op!(Vector3i, Add, add, tsVector3i_add);
declare_vector_op!(Vector3i, Sub, sub, tsVector3i_sub);
declare_vector_op!(Vector3i, BitAnd, bitand, tsVector3i_and);
declare_vector_op!(Vector3i, BitOr,  bitor,  tsVector3i_or);
declare_vector_op!(Vector3i, BitXor, bitxor, tsVector3i_xor);

/*
 */
extern "C" {
	fn tsVector3i_abs(ret: *mut Vector3i, v: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_neg(ret: *mut Vector3i, v: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_mul1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_div1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_add1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_sub1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_and1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_or1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_xor1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_shl1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_shr1(ret: *mut Vector3i, v0: *const Vector3i, v1: i32) -> *mut Vector3i;
	fn tsVector3i_mul(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_div(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_add(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_sub(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_and(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_or(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_xor(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_min(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_max(ret: *mut Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
	fn tsVector3i_clamp(ret: *mut Vector3i, v: *const Vector3i, v0: *const Vector3i, v1: *const Vector3i) -> *mut Vector3i;
}

/*****************************************************************************\
 *
 * Vector3u
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector3u {
	pub x: u32,
	pub y: u32,
	pub z: u32,
}

/*
 */
impl Vector3u {
	
	pub fn new_s(v: u32) -> Vector3u {
		Vector3u { x: v, y: v, z: v }
	}
	pub fn new_v2(v: &Vector2u, z: u32) -> Vector3u {
		Vector3u { x: v.x, y: v.y, z: z }
	}
	pub fn new_v3i(v: &Vector3i) -> Vector3u {
		Vector3u { x: v.x as u32, y: v.y as u32, z: v.z as u32 }
	}
	pub fn new_v3f(v: &Vector3f) -> Vector3u {
		Vector3u { x: v.x as u32, y: v.y as u32, z: v.z as u32 }
	}
	pub fn new_v3d(v: &Vector3d) -> Vector3u {
		Vector3u { x: v.x as u32, y: v.y as u32, z: v.z as u32 }
	}
	pub fn new_v4(v: &Vector4u) -> Vector3u {
		Vector3u { x: v.x, y: v.y, z: v.z }
	}
	pub fn new(x: u32, y: u32, z: u32) -> Vector3u {
		Vector3u { x: x, y: y, z: z }
	}
	pub fn new_a(v: &[u32]) -> Vector3u {
		Vector3u { x: v[0], y: v[1], z: v[2] }
	}
	
	pub fn min(v0: &Vector3u, v1: &Vector3u) -> Vector3u {
		let mut ret = Vector3u::default();
		unsafe { tsVector3u_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector3u, v1: &Vector3u) -> Vector3u {
		let mut ret = Vector3u::default();
		unsafe { tsVector3u_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector3u, v1: &Vector3u) -> Vector3u {
		let mut ret = Vector3u::default();
		unsafe { tsVector3u_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector3u {
		Vector3u { x: 0, y: 0, z: 0 }
	}
	pub fn one() -> Vector3u {
		Vector3u { x: 1, y: 1, z: 1 }
	}
}

/*
 */
impl fmt::Display for Vector3u {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2})", self.x, self.y, self.z)
	}
}

/*
 */
declare_scalar_op!(Vector3u, u32, Mul, mul, tsVector3u_mul1);
declare_scalar_op!(Vector3u, u32, Div, div, tsVector3u_div1);
declare_scalar_op!(Vector3u, u32, Add, add, tsVector3u_add1);
declare_scalar_op!(Vector3u, u32, Sub, sub, tsVector3u_sub1);
declare_scalar_op!(Vector3u, u32, BitAnd, bitand, tsVector3u_and1);
declare_scalar_op!(Vector3u, u32, BitOr,  bitor,  tsVector3u_or1);
declare_scalar_op!(Vector3u, u32, BitXor, bitxor, tsVector3u_xor1);
declare_scalar_op!(Vector3u, u32, Shl, shl, tsVector3u_shl1);
declare_scalar_op!(Vector3u, u32, Shr, shr, tsVector3u_shr1);
